# AIOS

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
broker/: Cargo.toml
broker/src/: executor.rs  main.rs  registry.rs  validation.rs
docs/: CONTRIBUTING.md  architecture.md  threat-model.md  tool-schema-spec.md
memory-layer/: Cargo.toml
memory-layer/src/: lib.rs
model-runtime/: Cargo.toml
model-runtime/src/: lib.rs
policy-engine/: Cargo.toml
policy-engine/src/: lib.rs
safety-monitor/: Cargo.toml
safety-monitor/src/: lib.rs
schemas/policies/: default-policy.yaml  policy-schema.json
schemas/tools/: control_brightness.json  create_calendar_event.json  read_file.json  send_message.json  set_focus_mode.json
shell-app/: settings.gradle.kts
shell-app/app/: build.gradle.kts
shell-app/app/src/main/java/dev/aios/shell/ai/: AIManager.kt  ModelDownloader.kt
shell-app/app/src/main/java/dev/aios/shell/broker/: IntentParser.kt
shell-app/app/src/main/java/dev/aios/shell/ui/: AIOSApp.kt  SettingsScreen.kt
shell-app/app/src/main/java/dev/aios/shell/viewmodel/: ShellViewModel.kt
