[package]
name = "aios-memory-layer"
version = "0.1.0"
edition = "2021"
description = "AIOS Memory Layer — scoped, encrypted agent memory management"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
