[package]
name = "aios-model-runtime"
version = "0.1.0"
edition = "2021"
description = "AIOS Model Runtime Manager — local and remote model lifecycle management"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "1"

[dev-dependencies]
