[package]
name = "aios-policy-engine"
version = "0.1.0"
edition = "2021"
description = "AIOS Policy Engine — deny-by-default action gating for AI agents"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
thiserror = "1"
glob-match = "0.2"

[dev-dependencies]
